style.css
/* ... */
.mail-content a {
  color: #fff;
  font-size: 1.1rem;
  font-weight: 300;
}

.mail-logo {
  place-content: center;
  border-radius: .5rem;
  width: 52px;
  height: 52px;
  font-size: 1.5rem;
  display: grid;
  background-color: rgb(0, 0, 0, .2);
}

.mail-logo svg {
  place-content: center;
  text-align: center;
}

.icons {
  display: flex;
  justify-content: center;
  font-size: 1.875rem;
  gap: 1.25rem;
  margin-bottom: 1rem;
}

.icons a {
  color: #fff;
}


/* Contact Us Page End */






@media only screen and (min-width: 769px) {
  /* For Desktop */

  .title {
    font-size: 42px;
  }

  .menu {
    line-height: 80px;
  }

  .nav-bar {
    padding: 0% 10%;
  }

  .btn-design {
    font-size: 16px;
    padding: 8px 28px;
  }

  .first-section {
    text-align: left;
    margin: 12% 10%;
    display: flex;
    flex-direction: row;
  }

  .first-section h2 {
    font-size: 54px;
  }

  .first-section h3 {
    font-weight: 200;
    font-size: 22px;
    margin: 0px 0px 49px 0px;
  }

  .headerText {
    width: 60%;
  }

  .headerImage-div {
    width: 40%;
    margin: 0px 0px 0px 0px;
  }

  .headerImage {
    width: 75%;
    float: right;
  }

  .first-section a {
    font-size: 20px;
    padding: 18px 36px;
  }

  .second-section {
    box-shadow: var(--drop-shadow) 10px 10px 0px -2px;
    padding: 3% 5%;
    margin: 3% 20%;
  }

  .journey-title {
    font-size: 38px;
  }

  .journey-title p {
    margin: 0px 0px 20px 0px;
    padding: 0;
  }

  .journey-list {
    margin: 0px 30px;
    top: 0;
  }

  .journey-items h4 {
    font-size: 32px;
    margin: 5px 0px;
    padding: 0;
  }

  .journey-items p {
    font-size: 18px;
    margin: 0;
    padding: 0;
  }

  .card {
    max-width: 350px;
  }

  .about-us {
    padding: 3% 20%;
  }

  .button-61 {
    font-size: 0.875rem;
    padding: 0.75rem 1.75rem;
  }

  .image-div img {
    width: 16rem;
    height: 16rem;
  }

  .social-section {
    padding: 5% 20%;
  }

  .social-card-section {
    grid-template-columns: repeat(4, minmax(0, 1fr));
  }

  .social-desc {
    font-size: 1rem;
  }

  /* Contact Section Started */

  .contact-form-section {
    display: flex;
  }

  .contact-form {
    width: 70%;
  }

  .contact-title {
    display: flex;
    height: 100%;
    margin-left: 15%;
    align-items: center;
  }

  .form-title {
    font-size: 2.25rem;
  }

  .form-title {
    display: flex;
    justify-content: space-between;
    text-align: center;
  }

  .first-contact-section {
    gap: 2rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
  }


.submit-btn a {
  color: #fff;
  border-radius: 5px;
  padding: 1rem 2rem;
  background: var(--blog);
  float: right;
  font-size: 1.25rem;
  vertical-align: middle;
  display: flex;
  align-items: center;
  transition: all .4s ease;
}

.submit-btn a:hover{
  background-color: var(--blog-secondary);
}

.submit-btn a svg{
  margin-left: .6rem;
}

  .social-contact {
    width: 30%;
    background-color: var(--blog);
  }

  /* Contact Section Ended */
}
/* ... */

